improved navigation bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <section class="about" id="about">
-        <h1 class="hprimary ">Welcome to travel Guide</h1>
+        <h1 class="hprimary " id="wel">Welcome to travel Guide</h1>
         <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to visit
         </p>
         <p class="intro pprimary"> With a brief of accommodation, reachablity, time taken to visit a place and avrage
@@ -84,11 +84,13 @@
             </div>
 
         </div>
+    </section>
+    <section id="footer">
         <div class="footer">
             <p class="pfooter">&copy; Teavel Guide. All rights reserved</p>
         </div>
     </section>
-
+    
 
 
 
