added mumbai and pune to home page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- hprimary hsecondary pprimary psecondary pfooter are avilable in genral in css -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,20 +12,30 @@
 </head>
 
 <body>
+
+    <!-- navigation bar content -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+    <!-- all css is found in  -->
     <nav id="navbar">
         <div id="logo">
             <img src="images/page genral contents/region-code.png" alt="">
         </div>
         <ul>
             <li class="header" id="home"><a href="">Home</a></li>
-            <li class="header" id="place one "><a href="">Pune</a></li>
-            <li class="header" id="place two"><a href="">Mumbai</a></li>
+            <li class="header" id="place two"><a href="#mumbai">Mumbai</a></li>
+            <li class="header" id="place one "><a href="#pune">Pune</a></li>
             <li class="header" id="place three"><a href="">Nasik</a></li>
             <li class="header" id="place four"><a href="">Ajanta Ellora</a></li>
             <li class="header" id="place five"><a href="">lonavala</a></li>
             <li class="header" id="feedback"><a href="">feedback</a></li>
         </ul>
     </nav>
+
+
+
+    <!-- landing spot content -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+
     <section class="about" id="about">
         <h1 class="hprimary " id="wel">Welcome to travel Guide</h1>
         <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to visit
@@ -34,6 +45,13 @@
         <p class="intro pprimary">you would know which place to visit in your</p>
 
     </section>
+
+
+
+
+    <!-- chooseing spot content -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+
     <section class="places" id="mplaces">
         <h1 class="hprimary">Places to choose from </h1>
         <div id="choose">
@@ -41,7 +59,7 @@
                 <div class="pimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image ">
                 </div>
-                <h1 class="hsecondary">Mumbai</h1>
+                <h1 class="hsecondary"><a href="#mumbai">Mumbai</a></h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
@@ -50,7 +68,7 @@
                 <div class="pimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Pune</h1>
+                <h1 class="hsecondary"><a href="#pune">Pune</a></h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
@@ -85,12 +103,111 @@
 
         </div>
     </section>
+
+
+
+    <!-- Mumbai spot and places in Mumbai -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+    <!-- everything is avilable in mumbai spot and banners css file  -->
+    <section class="mumbai" id="mumbai">
+        <h1 class="hprimary"> Mumbai </h1>
+        <div id="mchoose">
+            <div class="mname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                </div>
+                <h1 class="hsecondary">Place 1</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="mname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 2</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="mname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 3</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="mname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 4</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Mumbai spot and places in Pune -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+    <!-- everything is avilable in pune spot and banners css file  -->
+    <section class="pune" id="pune">
+        <h1 class="hprimary"> Pune </h1>
+        <div id="pchoose">
+            <div class="pname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                </div>
+                <h1 class="hsecondary">Place 1</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="pname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 2</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="pname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 3</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+            <div class="pname">
+                <div class="pimage">
+                    <img src="https://source.unsplash.com/random/245x200" alt="image">
+                </div>
+                <h1 class="hsecondary">Place 4</h1>
+                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
+                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- footer spot  -->
+    <!-- -------------------------------------------------------------------------------------------------------- -->
+
     <section id="footer">
         <div class="footer">
             <p class="pfooter">&copy; Teavel Guide. All rights reserved</p>
         </div>
     </section>
-    
+
 
 
 
