added pages for all the place category and added css to it

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" href ="images/page genral contents/region-code.png" type = "image/x-icon" background-color="white";> 
     <title>Guide</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +16,7 @@
 
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
-    <!-- all css is found in  -->
+    <!-- all css is found in  navigation  -->
     <nav id="navbar">
         <div id="logo">
             <img src="images/page genral contents/region-code.png" alt="">
@@ -122,40 +123,40 @@
         <h1 class="hprimary topic"> Mumbai </h1>
         <div id="mchoose">
             <div class="mname">
-                <div class="pimage"><a href="">
+                <div class="pimage"><a href="mumbai/beach.html">
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                 </div>
-                <h1 class="hsecondary">Place 1</h1>
+                <h1 class="hsecondary">Beaches</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="">
+                <div class="pimage"><a href="mumbai/caves.html">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 2</h1>
+                <h1 class="hsecondary">Caves</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="">
+                <div class="pimage"><a href="mumbai/monuments.html">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 3</h1>
+                <h1 class="hsecondary">Monuments</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
             <div class="mname">
-                <div class="pimage"><a href="">
+                <div class="pimage"><a href="mumbai/zoo_and_gardern.html">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 4</h1>
+                <h1 class="hsecondary">Zoo and Garderns</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
@@ -171,44 +172,44 @@
     <section class="pune" id="pune">
         <h1 class="hprimary topic"> Pune </h1>
         <div id="pchoose">
-            <div class="pnname"><a href="">
+            <div class="pnname"><a href="pune/biological_park.html">
                     <div class="pnimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
-                    <h1 class="hsecondary">Place 1</h1>
+                    <h1 class="hsecondary">Biological park</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="pnname"><a href="">
+            <div class="pnname"><a href="pune/monuments.html">
                     <div class="pnimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 2</h1>
+                    <h1 class="hsecondary">Monuments</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="pnname"><a href="">
+            <div class="pnname"><a href="pune/trek_and_gardern.html">
                     <div class="pnimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 3</h1>
+                    <h1 class="hsecondary">Trek and Garderns</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="pnname"><a href="">
+            <div class="pnname"><a href="pune/waterbodies.html">
                     <div class="pnimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 4</h1>
+                    <h1 class="hsecondary">Waterbodies</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
@@ -228,44 +229,44 @@
     <section class="nasik" id="nasik">
         <h1 class="hprimary topic"> Nasik </h1>
         <div id="nchoose">
-            <div class="nkname"><a href="">
+            <div class="nkname"><a href="nasik/monuments.html">
                     <div class="nkimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
-                    <h1 class="hsecondary">Place 1</h1>
+                    <h1 class="hsecondary">Monuments</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="nkname"><a href="">
+            <div class="nkname"><a href="nasik/religious_place.html">
                     <div class="nkimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 2</h1>
+                    <h1 class="hsecondary">Religious Places </h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="nkname"><a href="">
+            <div class="nkname"><a href="nasik/trek.html">
                     <div class="nkimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 3</h1>
+                    <h1 class="hsecondary">trek</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="nkname"><a href="">
+            <div class="nkname"><a href="nasik/waterfall.html">
                     <div class="nkimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 4</h1>
+                    <h1 class="hsecondary">Waterfall</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
@@ -282,44 +283,44 @@
     <section class="ajanta" id="ajanta">
         <h1 class="hprimary topic"> Ajanta Ellora </h1>
         <div id="aechoose">
-            <div class="aename"><a href="">
+            <div class="aename"><a href="ajanta_ellora/ajanta_caves.html">
                     <div class="aeimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image ">
                     </div>
-                    <h1 class="hsecondary">Place 1</h1>
+                    <h1 class="hsecondary">Ajanta Caves</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="aename"><a href="">
+            <div class="aename"><a href="ajanta_ellora/ellora_caves.html">
                     <div class="aeimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 2</h1>
+                    <h1 class="hsecondary">Ellora Caves</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="aename"><a href="">
+            <div class="aename"><a href="ajanta_ellora/daulatabad_fort.html">
                     <div class="aeimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 3</h1>
+                    <h1 class="hsecondary">Daulatabad fort</h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
                         quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
-            <div class="aename"><a href="">
+            <div class="aename"><a href="ajanta_ellora/goga_baba_hill.html">
                     <div class="aeimage">
                         <img src="https://source.unsplash.com/random/245x200" alt="image">
                     </div>
-                    <h1 class="hsecondary">Place 4</h1>
+                    <h1 class="hsecondary">Goga baba hill </h1>
                     <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                         incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
                         doloremque
@@ -337,41 +338,41 @@
     <section class="lonavala" id="lonavala">
         <h1 class="hprimary topic"> Lonavala </h1>
         <div id="lachoose">
-            <div class="laname"><a href="">
+            <div class="laname"><a href="lonavala/caves.html">
                 <div class="laimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image ">
                 </div>
-                <h1 class="hsecondary">Place 1</h1>
+                <h1 class="hsecondary">Caves</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                     </a>
             </div>
-            <div class="laname"><a href="">
+            <div class="laname"><a href="lonavala/monumnts.html">
                 <div class="laimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 2</h1>
+                <h1 class="hsecondary">Monuments</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                     </a>
             </div>
-            <div class="laname"><a href="">
+            <div class="laname"><a href="lonavala/trek_point.html">
                 <div class="laimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 3</h1>
+                <h1 class="hsecondary">Trek Points</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                     </a>
             </div>
-            <div class="laname"><a href="">
+            <div class="laname"><a href="lonavala/waterbodies.html">
                 <div class="laimage">
                     <img src="https://source.unsplash.com/random/245x200" alt="image">
                 </div>
-                <h1 class="hsecondary">Place 4</h1>
+                <h1 class="hsecondary">Waterbodies</h1>
                 <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
                     incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
                     quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
