added mobile optimisation to all pages and added image animation to home page ^^temp image to be replaced later ^^when replaces remove temp file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "icon" href ="images/page genral contents/region-code.png" type = "image/x-icon" background-color="white";> 
+    <link rel="icon" href="images/page genral contents/region-code.png" type="image/x-icon" background-color="white" ;>
     <title>Guide</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,12 +17,13 @@
     <!-- navigation bar content -->
     <!-- -------------------------------------------------------------------------------------------------------- -->
     <!-- all css is found in  navigation  -->
+    <top id="top"></top>
     <nav id="navbar">
         <div id="logo">
             <img src="images/page genral contents/region-code.png" alt="">
         </div>
         <ul>
-            <li class="header" id="home"><a href="#about">Home</a></li>
+            <li class="header" id="home"><a href="#top">Home</a></li>
             <li class="header" id="place two"><a href="#mumbai">Mumbai</a></li>
             <li class="header" id="place one "><a href="#pune">Pune</a></li>
             <li class="header" id="place three"><a href="#nasik">Nasik</a></li>
@@ -38,7 +39,7 @@
     <!-- -------------------------------------------------------------------------------------------------------- -->
 
     <section class="about" id="about">
-        <h1 class="hprimary " id="wel">Welcome to travel Guide</h1>
+        <!-- <h1 class="hprimary st" id="wel">Welcome to travel Guide</h1> -->
         <p class="intro pprimary">We will help you to decide which place to visit and when it is the best time to visit
         </p>
         <p class="intro pprimary"> With a brief of accommodation, reachablity, time taken to visit a place and avrage
@@ -101,13 +102,14 @@
                 </a>
             </div>
             <div class="name"><a href="#lonavala">
-                <div class="pimage">
-                    <img src="https://source.unsplash.com/random/245x200" alt="image">
-                </div>
-                <h1 class="hsecondary">lonavala</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                    <div class="pimage">
+                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                    </div>
+                    <h1 class="hsecondary">lonavala</h1>
+                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
+                        doloremque
+                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
                 </a>
             </div>
 
@@ -339,44 +341,48 @@
         <h1 class="hprimary topic"> Lonavala </h1>
         <div id="lachoose">
             <div class="laname"><a href="lonavala/caves.html">
-                <div class="laimage">
-                    <img src="https://source.unsplash.com/random/245x200" alt="image ">
-                </div>
-                <h1 class="hsecondary">Caves</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
-                    </a>
+                    <div class="laimage">
+                        <img src="https://source.unsplash.com/random/245x200" alt="image ">
+                    </div>
+                    <h1 class="hsecondary">Caves</h1>
+                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
+                        doloremque
+                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                </a>
             </div>
             <div class="laname"><a href="lonavala/monumnts.html">
-                <div class="laimage">
-                    <img src="https://source.unsplash.com/random/245x200" alt="image">
-                </div>
-                <h1 class="hsecondary">Monuments</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
-                    </a>
+                    <div class="laimage">
+                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                    </div>
+                    <h1 class="hsecondary">Monuments</h1>
+                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
+                        doloremque
+                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                </a>
             </div>
             <div class="laname"><a href="lonavala/trek_point.html">
-                <div class="laimage">
-                    <img src="https://source.unsplash.com/random/245x200" alt="image">
-                </div>
-                <h1 class="hsecondary">Trek Points</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
-                    </a>
+                    <div class="laimage">
+                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                    </div>
+                    <h1 class="hsecondary">Trek Points</h1>
+                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
+                        doloremque
+                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                </a>
             </div>
             <div class="laname"><a href="lonavala/waterbodies.html">
-                <div class="laimage">
-                    <img src="https://source.unsplash.com/random/245x200" alt="image">
-                </div>
-                <h1 class="hsecondary">Waterbodies</h1>
-                <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
-                    incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio doloremque
-                    quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
-                    </a>
+                    <div class="laimage">
+                        <img src="https://source.unsplash.com/random/245x200" alt="image">
+                    </div>
+                    <h1 class="hsecondary">Waterbodies</h1>
+                    <p class="psecondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Delectus deserunt
+                        incidunt reprehenderit odio consequuntur, tempore ipsum cupiditate, ratione, nobis optio
+                        doloremque
+                        quas. Facilis quis voluptatibus pariatur, reprehenderit repellendus officia et.</p>
+                </a>
             </div>
         </div>
     </section>
